syntax = "proto3";
package raft_service;

option go_package = "raft_service/";

import "entries.proto";


service RaftService {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    uint64 leaderCommit = 5;
    entries.LogEntry entry = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}